2005-04-05 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDictGroupName.[h|cxx] : add a correlation between a group (number)
     and it's representation name (for the NIH)

2005-03-31 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmPixelReadConvert.cxx : problems of around of double to uint8, when
     conversion of YBR to RGB pixels. So, now, the conversion is made using 
     integers only

2005-03-30 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Testing/TestAllReadCompareDicom.cxx : now use test files (invented file
     format) to replace 'at-run' dicom files generated by the 
     TestAllReadCompareDicom test

2005-03-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFileHelper.cxx : remove memory leaks and bugs when writing files

2005-02-22 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFileHelper.cxx : JPR bad personal choices fix

2005-02-11 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Testing/TestMAkeIcon.cxx : complete the test

2005-02-10 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Testing/TestWriteSimple.cxx, TestSequence.cxx : fix memroy leaks

2005-02-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmFileHelper.[h|cxx] : now correctly set the VR of the datas when 
     writting the file

2005-02-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/VTKTestWriteSeq.cxx : add a VTK test to write sequences

2005-02-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ : accelerate tests (it's not very significant accelerations).
     Remove TestCopyDicom that is redundant with TestCopyRescaleDicom

2005-02-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Testing/TestSequence.cxx : add test for sequences of images... test that
     we have the same serie or the same study UID

2005-02-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>